# weather-sensor

./: README.md  pyproject.toml
src/: boot.py  main.py
